fix spacing in media

--- a/asset/css/ecomuseo.css
+++ b/asset/css/ecomuseo.css
@@ -310,3 +310,7 @@ max-height: 7.5rem;
     color: white;
     border-width: 2px;
 }
+
+.media-render {
+    margin-top: 50px;
+}
